<resources>
	<string name="app_name">Lincoln Ovens</string>

	<string name="action_settings">Settings</string>
	<string name="logo_description">Manitowoc Logo</string>
	<string name="capacity_calculator_button">Capacity Calculator</string>
	<string name="oven_comparison_button">Oven Comparison</string>
	<string name="spec_sheet_links_button">Spec Sheets</string>
	<string name="action_search">Search</string>
	<string name="title_activity_capacity_calculator">Capacity Calculator</string>

	<string name="belt_width_label">Belt Width:</string>
	<string name="oven_capacity_label">Oven Capacity:</string>
	<string name="bake_time_label">Bake Time:</string>
	<string name="pan_type_label">Pan Type:</string>
	<string name="pan_diameter_label">Pan Diameter:</string>
	<string name="pan_width_label">Pan Width:</string>
	<string name="pan_length_label">Pan Length:</string>
	<string name="title_activity_spec_sheet_links">Spec Sheets</string>
	<string name="calculate_button">Calculate</string>
	<string name="action_exit">Exit</string>
	<string name="action_main_menu">Main Menu</string>
	<string name="choose_model">Choose Model</string>
	<string name="clear">Clear</string>

	<string name="ok">OK</string>
	<string name="cancel">Cancel</string>
	<string name="unit_in">in.</string>
	<string name="unit_min">min.</string>

	<string-array name="spec_sheets">
		<item>2500</item>
		<item>Ventless 2500</item>
		<item>1100</item>
		<item>Ventless 1100</item>
		<item>1400</item>
		<item>1600</item>
		<item>3240</item>
		<item>3255</item>
		<item>3270</item>
	</string-array>
	<string-array name="spec_sheet_links">
		<item>aximq</item>
		<item>wymfv</item>
		<item>edtmx</item>
		<item>qampl</item>
		<item>fcdcn</item>
		<item>prgda</item>
		<item>ojjww</item>
		<item>cqier</item>
		<item>hepix</item>
	</string-array>

	<string-array name="models">
		<item>2500</item>
		<item>1100</item>
		<item>1400/1600/3240</item>
		<item>3255</item>
		<item>3270</item>
	</string-array>
	<string-array name="model_sizes">
		<item>16</item>
		<item>20.5</item>
		<item>18</item>
		<item>28.25</item>
		<item>32</item>
		<item>40.1875</item>
		<item>32</item>
		<item>55</item>
		<item>32</item>
		<item>70</item>
	</string-array>
	<string-array name="pan_types">
		<item>Select Pan Type</item>
		<item>Round</item>
		<item>Rectangular</item>
	</string-array>

	<string-array name="models_extended">
		<item>2500</item>
		<item>1100</item>
		<item>1400</item>
		<item>1600</item>
		<item>3240</item>
		<item>3255</item>
		<item>3270</item>
	</string-array>
	<string-array name="properties">
		<item>Model Name</item>
		<item>Belt Width</item>
		<item>Chamber Length</item>
		<item>Stacking</item>
		<item>Gas/Electric</item>
		<item>Electric Ventless</item>
		<item>Half Pass Door</item>
	</string-array>
	<string-array name="belt_widths">
		<item>16</item>
		<item>18</item>
		<item>32</item>
		<item>32</item>
		<item>32</item>
		<item>32</item>
		<item>32</item>
	</string-array>
	<string-array name="chamber_lengths">
		<item>20</item>
		<item>28</item>
		<item>40</item>
		<item>40</item>
		<item>40</item>
		<item>55</item>
		<item>70</item>
	</string-array>
	<string-array name="stacking">
		<item>Double</item>
		<item>Triple</item>
		<item>Double</item>
		<item>Triple</item>
		<item>Triple</item>
		<item>Triple</item>
		<item>Triple</item>
	</string-array>
	<string-array name="gas_elec">
		<item>Electric</item>
		<item>Both</item>
		<item>Both</item>
		<item>Both</item>
		<item>Both</item>
		<item>Gas</item>
		<item>Gas</item>
	</string-array>
	<string-array name="elec_ventless_avail">
		<item>Yes</item>
		<item>Yes</item>
		<item>No</item>
		<item>No</item>
		<item>No</item>
		<item>No</item>
		<item>No</item>
	</string-array>
	<string-array name="half_pass_door">
		<item>No</item>
		<item>Yes</item>
		<item>Yes</item>
		<item>Yes</item>
		<item>Yes</item>
		<item>Yes</item>
		<item>Yes</item>
	</string-array>

	<string name="title_activity_oven_comparison">Oven Comparison</string>

	<string name="toggle_columns">Toggle Properties</string>
	<string name="ovens">Ovens</string>
</resources>
