<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
				xmlns:tools="http://schemas.android.com/tools"
				android:layout_width="match_parent"
				android:layout_height="match_parent"
				android:paddingBottom="@dimen/activity_vertical_margin"
				android:paddingLeft="@dimen/activity_horizontal_margin"
				android:paddingRight="@dimen/activity_horizontal_margin"
				android:paddingTop="@dimen/activity_vertical_margin"
				tools:context=".Calculator"
				android:background="@drawable/main_menu">
	<RelativeLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_centerHorizontal="true"
			android:background="@drawable/white"
			android:id="@id/logolayout"
			android:layout_marginBottom="16dp">
		<ImageView
				android:id="@id/manitowoc_logo"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:contentDescription="@string/logo_description"
				android:layout_centerHorizontal="true"
				android:src="@drawable/manitowocfoodservicelogo"/>
	</RelativeLayout>
	<Button
			android:id="@id/capacity_calculator_button"
			android:layout_below="@id/logolayout"
			android:text="@string/capacity_calculator_button"
			android:theme="@style/MainMenuButtonTheme"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"/>

	<Button
			android:id="@id/oven_comparison_button"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_below="@id/capacity_calculator_button"
			android:text="@string/oven_comparison_button"
			android:theme="@style/MainMenuButtonTheme"/>

	<Button
			android:id="@id/spec_sheet_link_button"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_below="@id/oven_comparison_button"
			android:text="@string/spec_sheet_links_button"
			android:theme="@style/MainMenuButtonTheme"/>
</RelativeLayout>
