<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
				android:layout_width="match_parent"
				android:layout_height="match_parent">
	<TextView
			android:layout_height="50sp"
			android:layout_width="wrap_content"
			android:id="@+id/belt_width_label"
			android:text="@string/belt_width_label"
			android:textSize="25sp"
			android:gravity="center"
			android:labelFor="@+id/belt_width"/>
	<EditText
			android:layout_width="wrap_content"
			android:layout_height="50sp"
			android:id="@+id/belt_width"
			android:inputType="number"
			android:layout_toEndOf="@id/belt_width_label"
			android:layout_toRightOf="@id/belt_width_label"
			android:textSize="25sp"/>

	<TextView
			android:layout_height="50sp"
			android:layout_width="wrap_content"
			android:id="@+id/oven_capacity_label"
			android:text="@string/oven_capacity_label"
			android:layout_below="@id/belt_width_label"
			android:textSize="25sp"
			android:gravity="center"
			android:labelFor="@+id/oven_capacity_label"/>
	<EditText
			android:layout_width="wrap_content"
			android:layout_height="50sp"
			android:id="@+id/oven_capacity"
			android:inputType="number"
			android:layout_toEndOf="@id/oven_capacity_label"
			android:layout_toRightOf="@id/oven_capacity_label"
			android:layout_below="@id/belt_width"
			android:textSize="25sp"/>

	<TextView
			android:layout_height="50sp"
			android:layout_width="wrap_content"
			android:id="@+id/bake_time_label"
			android:text="@string/bake_time_label"
			android:layout_below="@id/oven_capacity_label"
			android:textSize="25sp"
			android:gravity="center"
			android:labelFor="@+id/bake_time"/>
	<EditText
			android:layout_width="wrap_content"
			android:layout_height="50sp"
			android:id="@+id/bake_time"
			android:inputType="number"
			android:layout_toEndOf="@id/bake_time_label"
			android:layout_toRightOf="@id/bake_time_label"
			android:layout_below="@id/oven_capacity"
			android:textSize="25sp"/>

	<TextView
			android:layout_height="50sp"
			android:layout_width="wrap_content"
			android:id="@+id/pan_type_label"
			android:text="@string/pan_type_label"
			android:layout_below="@id/bake_time_label"
			android:textSize="25sp"
			android:gravity="center"
			android:labelFor="@+id/pan_type"/>
	<Spinner
			android:layout_width="wrap_content"
			android:layout_height="50sp"
			android:id="@+id/pan_type"
			android:layout_toEndOf="@id/pan_type_label"
			android:layout_toRightOf="@id/pan_type_label"
			android:layout_below="@id/bake_time"
			android:textSize="25sp"/>

	<TextView
			android:layout_height="50sp"
			android:layout_width="wrap_content"
			android:id="@+id/pan_diameter_label"
			android:text="@string/pan_diameter_label"
			android:layout_below="@id/pan_type_label"
			android:textSize="25sp"
			android:gravity="center"
			android:visibility="invisible"
			android:labelFor="@+id/pan_diameter"/>
	<EditText
			android:layout_width="wrap_content"
			android:layout_height="50sp"
			android:id="@+id/pan_diameter"
			android:inputType="number"
			android:layout_toEndOf="@id/pan_diameter_label"
			android:layout_toRightOf="@id/pan_diameter_label"
			android:layout_below="@id/pan_type"
			android:textSize="25sp"
			android:visibility="invisible"/>

	<TextView
			android:layout_height="50sp"
			android:layout_width="wrap_content"
			android:id="@+id/pan_width_label"
			android:text="@string/pan_width_label"
			android:layout_below="@id/pan_type_label"
			android:textSize="25sp"
			android:gravity="center"
			android:visibility="invisible"
			android:labelFor="@+id/pan_width"/>
	<EditText
			android:layout_width="wrap_content"
			android:layout_height="50sp"
			android:id="@+id/pan_width"
			android:inputType="number"
			android:layout_toEndOf="@id/pan_width_label"
			android:layout_toRightOf="@id/pan_width_label"
			android:layout_below="@id/pan_type"
			android:textSize="25sp"
			android:visibility="invisible"/>

	<TextView
			android:layout_height="50sp"
			android:layout_width="wrap_content"
			android:id="@+id/pan_length_label"
			android:text="@string/pan_length_label"
			android:layout_below="@id/pan_width_label"
			android:textSize="25sp"
			android:gravity="center"
			android:visibility="invisible"
			android:labelFor="@+id/pan_length"/>
	<EditText
			android:layout_width="wrap_content"
			android:layout_height="50sp"
			android:id="@+id/pan_length"
			android:inputType="number"
			android:layout_toEndOf="@id/pan_length_label"
			android:layout_toRightOf="@id/pan_length_label"
			android:layout_below="@id/pan_width"
			android:textSize="25sp"
			android:visibility="invisible"/>
</RelativeLayout>